--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 
     <script src="src/index.js"></script>
     <script src="src/test/test.js"></script>
+    <script src="src/test/test_second.js"></script>
   </body>
 </html>
